Short Audio clip can be correctly classified

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ node_modules/
 recordings/
 .auth.json
 auth.json
+models/checkpoint_0.4_2021-10-04.h5
+models/checkpoint_0.6_2021-10-04.h5
+models/checkpoint_0.7_2021-10-04.h5
+models/checkpoint60.h5
+models/labels_0.5_2021-10-04.pickle
+models/labels_0.7_2021-10-04.pickle
+models/labels_0.8_2021-10-04.pickle
+models/model_0.5_2021-10-04.h5
+models/model_0.7_2021-10-04.h5
+models/model_0.8_2021-10-04.h5
+recordings/1633007658494_rick_sanchez#1507.wav
+recordings/1633007658496_BobbyMcLovin#3497.wav
+recordings/1633007658496_marcode3#8575.wav
+recordings/1633008579275_rick_sanchez#1507.wav
+recordings/1633008579277_BobbyMcLovin#3497.wav
+recordings/1633008579277_marcode3#8575.wav
